--- a/index4.html
+++ b/index4.html
@@ -267,7 +267,7 @@
         <div class="product-info">
           <div class="product-title">Misty Hills Tote Bag</div>
           <div class="product-desc">Morning mountains and lake light, carry the natural tenderness along with the travelling.</div>
-          <div class="product-price">$14</div>
+          <div class="product-price">£9.90</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -278,7 +278,7 @@
         <div class="product-info">
           <div class="product-title">Swan Reflection Glasses Cloth</div>
           <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
-          <div class="product-price">$12</div>
+          <div class="product-price">£9.50</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -289,7 +289,7 @@
         <div class="product-info">
           <div class="product-title">Lighthouse Drawstring Pouch</div>
           <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
-          <div class="product-price">$25</div>
+          <div class="product-price">£18.00</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -300,7 +300,7 @@
         <div class="product-info">
           <div class="product-title">Ripple Light Floor Mat</div>
           <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
-          <div class="product-price">$32</div>
+          <div class="product-price">£23.00</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -311,7 +311,7 @@
         <div class="product-info">
           <div class="product-title">Pasture Memory Glass Frame</div>
           <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
-          <div class="product-price">$15</div>
+          <div class="product-price">£10.50</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -322,7 +322,7 @@
         <div class="product-info">
           <div class="product-title">Nature Moments Bookmark</div>
           <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
-          <div class="product-price">$12</div>
+          <div class="product-price">£8.50</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -333,7 +333,7 @@
         <div class="product-info">
           <div class="product-title">Landscape Journey Commemorative Coin</div>
           <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
-          <div class="product-price">$15</div>
+          <div class="product-price">£11.00</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -344,7 +344,7 @@
                 <div class="product-info">
           <div class="product-title">Verdant Pastures Blanket</div>
           <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
-          <div class="product-price">$40</div>
+          <div class="product-price">£30.00</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
