--- a/feedback.html
+++ b/feedback.html
@@ -5,65 +5,42 @@
   <title>意见反馈</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      background: #f6f8fa;
-      font-family: "PingFang SC", Arial, "Microsoft Yahei", sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 500px;
-      margin: 64px auto 0;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 4px 20px #e8eaf0;
-      padding: 40px 24px;
-      text-align: center;
-    }
-    h2 {
-      color: #296ac9;
-      margin-bottom: 18px;
-    }
-    textarea {
-      width: 96%;
-      min-height: 120px;
-      margin-bottom: 18px;
-      border-radius: 8px;
-      border: 1.2px solid #dbe3ee;
-      padding: 10px;
-      font-size: 1em;
-      resize: vertical;
-      background: #f7f9fb;
-    }
-    button {
-      background: #296ac9;
+    body { background: #f6f8fa; font-family: "PingFang SC", Arial, sans-serif; margin:0; }
+    .container { max-width: 480px; margin: 80px auto 0; background: #fff; border-radius: 18px; box-shadow: 0 4px 24px #e8eaf0; padding: 40px 28px; text-align: center; }
+    h2 { color: #296ac9; margin-bottom: 20px; }
+    .desc { color: #53678a; margin-bottom: 32px; font-size: 1.07em; }
+    .git-btn {
+      display: inline-block;
+      padding: 14px 38px;
+      background: #24292f;
       color: #fff;
       border: none;
-      border-radius: 7px;
-      padding: 11px 32px;
-      font-size: 1.08em;
+      border-radius: 8px;
+      font-size: 1.13em;
+      font-weight: 600;
       cursor: pointer;
-      transition: background 0.16s;
+      text-decoration: none;
+      transition: background 0.16s, transform 0.13s;
+      box-shadow: 0 2px 10px #dee2ed;
     }
-    button:hover {
-      background: #194683;
+    .git-btn:hover {
+      background: #0969da;
+      transform: scale(1.04);
     }
-    .tips {
-      color: #7886a3;
-      font-size: 0.98em;
-      margin-bottom: 18px;
-    }
+    .tips { color: #8b98a8; font-size: 0.97em; margin-top: 24px;}
   </style>
 </head>
 <body>
   <div class="container">
     <h2>意见反馈</h2>
-    <div class="tips">欢迎留下你对本网页的建议或问题（内容仅供作者个人参考，不会公开）</div>
-    <form action="https://formspree.io/f/your_form_id" method="POST">
-      <textarea name="feedback" placeholder="请输入你的建议或遇到的问题……" required></textarea>
-      <br>
-      <button type="submit">提交反馈</button>
-    </form>
+    <div class="desc">
+      如你在体验本网页过程中有任何建议、bug或疑问，欢迎点击下方按钮在 GitHub Issues 提交反馈。<br>
+      你可以选择匿名（无需填写邮箱），也可以登录 GitHub 账号进行交流。
+    </div>
+    <a class="git-btn" href="https://github.com/No9WhaleFall/survey-materials/issues" target="_blank">
+      去 GitHub 提交反馈
+    </a>
+    <div class="tips">如不能访问 GitHub，可通过微信、邮箱等其他方式联系作者。</div>
   </div>
 </body>
 </html>
