--- a/index4.html
+++ b/index4.html
@@ -9,6 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
+    .center-text {
+  text-align: center !important;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
     body {
       background-color: #fff;
       margin: 0;
@@ -349,8 +355,9 @@
         </div>
       </div>
     </div>
-    <button class="more-btn">Please click on the next section to continue completing the questionnaire</button>
-  </div>
+<div class="survey-desc center-text">
+  Please return to the questionnaire<br>
+  Click the next section to continue completing the questionnaire  </div>
   <!-- NetEase Music BGM Player -->
   <meting-js
     server="netease"
