--- a/index3.html
+++ b/index3.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences: Visual and Music Sensory Stimulation</title>
   <!-- Fonts and APlayer, MetingJS dependencies -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700&family=Montserrat:wght@500&display=swap" rel="stylesheet">
