--- a/index5.html
+++ b/index5.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>跨文化感官刺激与网络购物体验模拟：视觉与音乐感官刺激</title>
   <!-- Fonts and APlayer, MetingJS dependencies -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700&family=Montserrat:wght@500&display=swap" rel="stylesheet">
