--- a/index5.html
+++ b/index5.html
@@ -4,19 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>跨文化感官刺激与网络购物体验模拟：视觉与音乐感官刺激</title>
-  <!-- Fonts and APlayer, MetingJS dependencies -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700&family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
-    /* ...（此处样式无须更改，省略）... */
     .center-text {
-  text-align: center !important;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
+      text-align: center !important;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
     body {
       background-color: #fff;
       margin: 0;
@@ -100,6 +98,7 @@
       box-shadow: 0 2px 12px #2221;
       border: 1.5px solid #d8d8d8;
       display: flex;
+      flex-direction: column;   /* 竖排布局 */
       align-items: center;
       gap: 16px;
       min-height: 96px;
@@ -111,8 +110,9 @@
       box-shadow: 0 6px 24px #34343422;
     }
     .product-img {
-      width: 72px;
-      height: 72px;
+      width: 100%;
+      max-width: 320px;
+      height: auto;
       background: #ededed;
       border-radius: 12px;
       border: 1.2px solid #d8d8d8;
@@ -122,15 +122,21 @@
       font-size: 1.05rem;
       color: #858585;
       font-family: 'Montserrat', Arial, sans-serif;
-      flex-shrink: 0;
-      margin-right: 10px;
+      margin: 0 auto 10px auto;
+      overflow: hidden;
+    }
+    .product-img img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
     }
     .product-info {
-      flex: 1;
-      min-width: 0;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
     }
     .product-title {
       color: #232325;
@@ -141,15 +147,17 @@
       white-space: normal;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: center;
     }
     .product-desc {
       font-size: 0.99rem;
       color: #6b6b6b;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
-      white-space: normal;      /* 修改：允许换行 */
-      overflow: visible;        /* 修改：溢出可见 */
-      text-overflow: initial;   /* 修改：关闭省略号 */
+      white-space: normal;
+      overflow: visible;
+      text-overflow: initial;
+      text-align: center;
     }
     .product-price {
       color: #343434;
@@ -157,10 +165,10 @@
       margin-top: 1px;
       font-weight: 600;
       font-family: 'Montserrat', Arial, sans-serif;
+      text-align: center;
     }
     .btn {
       display: inline-block;
-      margin-left: 20px;
       margin-top: 18px;
       padding: 9px 22px;
       background: linear-gradient(90deg, #232325 70%, #9b9b9b 100%);
@@ -204,201 +212,211 @@
       .container { max-width: 99vw; }
       .product-list { flex-direction: column; gap: 18px; }
       .product-card { max-width: 99vw; min-width: 0; }
+      .product-img { max-width: 99vw; }
     }
     @media (max-width: 600px) {
       .container { padding: 7px 0; }
       .title-main, .title-sub { font-size: 1.13rem; }
-      .product-card { flex-direction: column; gap: 8px; padding: 14px 8px; }
-      .product-img { width: 56px; height: 56px; }
+      .product-card { padding: 14px 8px; }
+      .product-img { max-width: 99vw; }
       .btn, .more-btn { font-size: 0.99rem; padding: 7px 12px;}
     }
-  .music-tip {
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(34,34,34, 0.93);
-  color: #fff;
-  padding: 22px 36px 18px 36px;
-  border-radius: 16px;
-  font-size: 1.18rem;
-  font-family: 'Montserrat', 'Noto Serif SC', serif;
-  box-shadow: 0 4px 24px #2227;
-  z-index: 9999;
-  text-align: center;
-  pointer-events: none;
-  opacity: 1;
-  transition: opacity 0.6s;
-}
-.music-tip.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-  .survey-desc {
-  margin: 0 0 26px 0;
-  padding-left: 1.6em;
-  color: #232325;
-  font-size: 1.14rem;
-  line-height: 1.7;
-  font-family: 'Noto Serif SC', serif;
-  text-align: left;
-  max-width: 900px;
-}
-.survey-desc li {
-  margin-bottom: 8px;
-  list-style-type: disc;
-}
-@media (max-width: 600px) {
-  .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
-}
+    .music-tip {
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(34,34,34, 0.93);
+      color: #fff;
+      padding: 22px 36px 18px 36px;
+      border-radius: 16px;
+      font-size: 1.18rem;
+      font-family: 'Montserrat', 'Noto Serif SC', serif;
+      box-shadow: 0 4px 24px #2227;
+      z-index: 9999;
+      text-align: center;
+      pointer-events: none;
+      opacity: 1;
+      transition: opacity 0.6s;
+    }
+    .music-tip.hide {
+      opacity: 0;
+      pointer-events: none;
+    }
+    .survey-desc {
+      margin: 0 0 26px 0;
+      padding-left: 1.6em;
+      color: #232325;
+      font-size: 1.14rem;
+      line-height: 1.7;
+      font-family: 'Noto Serif SC', serif;
+      text-align: left;
+      max-width: 900px;
+    }
+    .survey-desc li {
+      margin-bottom: 8px;
+      list-style-type: disc;
+    }
+    @media (max-width: 600px) {
+      .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
+    }
   </style>
 </head>
 <body>
- <div id="music-tip" class="music-tip">
-  <span style="font-size:0.98em;color:#aaa;">请点击任意位置以启用背景音乐。</span>
-</div>
-  <div class="navbar">问卷实验材料C</div>
+  <div id="music-tip" class="music-tip">
+    <span style="font-size:0.98em;color:#aaa;">请点击页面任意位置以开启背景音乐</span>
+  </div>
+  <div class="navbar">实验材料 D - 中性感官组</div>
   <div class="container">
     <span class="title-main">跨文化感官刺激与网络购物体验模拟：</span>
-    <span class="title-sub">页面与音乐感官刺激</span>
+    <span class="title-sub">视觉与音乐感官刺激</span>
     <ul class="survey-desc">
-  <li>感谢您参与本次问卷！</li>
-  <li>本页面为模拟在线购物网页，配有背景音乐，旨在研究不同感官元素对用户情感参与及满意度的影响。</li>
-  <li>本页面仅用于学术研究，所有数据均严格保密。</li>
-  <li>请您认真浏览页面并聆听音乐，根据您的真实体验完成问卷。</li>
-</ul>
+      <li>感谢您参与本次问卷！</li>
+      <li>本页面为网络购物网站的模拟界面，伴有背景音乐，旨在调查不同感官元素对用户网络购物时情感投入和满意度的影响。</li>
+      <li>本页面仅用于学术研究，所有数据均严格保密。</li>
+      <li>请认真浏览页面并聆听背景音乐，再根据真实体验完成后续问卷。</li>
+    </ul>
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
-          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">晨雾山影帆布袋</div>
-          <div class="product-desc">晨曦山色与湖光，随行携带自然温柔。</div>
-          <div class="product-price">£9.90</div>
-          <button class="btn">立即购买</button>
+          <div class="product-title">Misty Hills Tote Bag</div>
+          <div class="product-desc">Morning mountains and lake light, carry the natural tenderness along with the travelling.</div>
+          <div class="product-price">¥99</div>
+          <button class="btn">Buy Now</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">天鹅水影眼镜布</div>
-          <div class="product-desc">天鹅与水面倒影，让日常添一抹灵动。</div>
-          <div class="product-price">£9.50</div>
-          <button class="btn">加入购物篮</button>
+          <div class="product-title">Swan Reflection Glasses Cloth</div>
+          <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
+          <div class="product-price">¥95</div>
+          <button class="btn">Add to Basket</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-        </div>        
+          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
+        </div>
         <div class="product-info">
-          <div class="product-title">海岸灯塔收纳束口袋</div>
-          <div class="product-desc">海岸灯塔与公路，收纳你的旅行小物。</div>
-          <div class="product-price">£18.00</div>
-          <button class="btn">立即购买</button>
+          <div class="product-title">Lighthouse Drawstring Pouch</div>
+          <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
+          <div class="product-price">¥180</div>
+          <button class="btn">Buy Now</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">涟漪之光地垫</div>
-          <div class="product-desc">捕捉阳光点点波光，为空间加一丝清新。</div>
-          <div class="product-price">£23.00</div>
-          <button class="btn">加入购物篮</button>
+          <div class="product-title">Ripple Light Floor Mat</div>
+          <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
+          <div class="product-price">¥230</div>
+          <button class="btn">Add to Basket</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">牧野时光玻璃相框</div>
-          <div class="product-desc">牧场树影定格，时光温柔流转。</div>
-          <div class="product-price">£10.50</div>
-          <button class="btn">立即购买</button>
+          <div class="product-title">Pasture Memory Glass Frame</div>
+          <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
+          <div class="product-price">¥105</div>
+          <button class="btn">Buy Now</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">自然印象书签</div>
-          <div class="product-desc">灵感源自影像胶片，同时记录三幕充满故事感的自然画面。</div>
-          <div class="product-price">£8.50</div>
-          <button class="btn">加入购物篮</button>
+          <div class="product-title">Nature Moments Bookmark</div>
+          <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
+          <div class="product-price">¥85</div>
+          <button class="btn">Add to Basket</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">风景双面纪念币</div>
-          <div class="product-desc">双面印有自然风景，留存本次旅程的独特记忆。</div>
-          <div class="product-price">£11.00</div>
-          <button class="btn">立即购买</button>
+          <div class="product-title">Landscape Journey Commemorative Coin</div>
+          <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
+          <div class="product-price">¥110</div>
+          <button class="btn">Buy Now</button>
         </div>
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius:12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">绿野休憩毛毯</div>
-          <div class="product-desc">绿意环绕，静享属于自己的休憩时光。</div>
-          <div class="product-price">£30.00</div>
-          <button class="btn">加入购物篮</button>
+          <div class="product-title">Verdant Pastures Blanket</div>
+          <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
+          <div class="product-price">¥300</div>
+          <button class="btn">Add to Basket</button>
         </div>
       </div>
     </div>
- <div class="survey-desc center-text">
-  请回到问卷<br>
-  点击下一部分继续填写问卷
-</div>
-  <!-- NetEase Music BGM Player -->
-  <meting-js
-    server="netease"
-    type="song"
-    id="1903373103"
-    fixed="true"
-    autoplay="true"
-    loop="all"
-    order="list"
-    volume="0.5"
-  ></meting-js>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  var played = false;
-  var tip = document.getElementById('music-tip');
-  function playBGM() {
-    if (played) return;
-    var ap = document.querySelector('meting-js').aplayer;
-    if (ap) {
-      ap.audio.play();
-      played = true;
-      if (tip) {
-        tip.classList.add('hide');
-        setTimeout(function(){ tip.style.display = 'none'; }, 900);
-      }
-    } else {
-      setTimeout(playBGM, 500);
-    }
-  }
-  document.body.addEventListener('click', playBGM, { once: true });
-});
-</script>
-  <div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
-  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
-</div>
-  <script>
-document.querySelectorAll('.enlarge-img').forEach(img => {
-  img.style.cursor = 'zoom-in';
-  img.onclick = () => {
-    document.getElementById('modal-img').src = img.src;
-    document.getElementById
+    <div class="survey-desc center-text">
+      请返回问卷页面<br>
+      点击下一部分继续完成后续问卷
+    </div>
+    <!-- 网易云音乐播放器 -->
+    <meting-js
+      server="netease"
+      type="song"
+      id="1978359454"
+      fixed="true"
+      autoplay="true"
+      loop="all"
+      order="list"
+      volume="0.5"
+    ></meting-js>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var played = false;
+        var tip = document.getElementById('music-tip');
+        function playBGM() {
+          if (played) return;
+          var ap = document.querySelector('meting-js').aplayer;
+          if (ap) {
+            ap.audio.play();
+            played = true;
+            if (tip) {
+              tip.classList.add('hide');
+              setTimeout(function(){ tip.style.display = 'none'; }, 900);
+            }
+          } else {
+            setTimeout(playBGM, 500);
+          }
+        }
+        document.body.addEventListener('click', playBGM, { once: true });
+      });
+    </script>
+    <div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+      <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+    </div>
+    <script>
+      document.querySelectorAll('.enlarge-img').forEach(img => {
+        img.style.cursor = 'zoom-in';
+        img.onclick = () => {
+          document.getElementById('modal-img').src = img.src;
+          document.getElementById('img-modal').style.display = 'flex';
+        };
+      });
+      document.getElementById('img-modal').onclick = function(e) {
+        if (e.target === this) this.style.display = 'none';
+      };
+    </script>
+  </div>
+</body>
+</html>
