--- a/index6.html
+++ b/index6.html
@@ -11,11 +11,11 @@
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
     .center-text {
-  text-align: center !important;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
+      text-align: center !important;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
     body {
       background-color: #f8efe6;
       background-image: url('卷云纹.png');
@@ -102,6 +102,7 @@
       box-shadow: 0 2px 12px #cead4c18;
       border: 1.5px solid #e9c769;
       display: flex;
+      flex-direction: column;   /* 调整为竖排 */
       align-items: center;
       gap: 16px;
       min-height: 96px;
@@ -113,8 +114,9 @@
       box-shadow: 0 6px 24px #c4241c22;
     }
     .product-img {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      max-width: 320px;
+      height: auto;
       background: #fff4ea;
       border-radius: 12px;
       border: 1.2px solid #e9c769;
@@ -124,15 +126,21 @@
       font-size: 1.05rem;
       color: #b67d2f;
       font-family: 'Montserrat', Arial, sans-serif;
-      flex-shrink: 0;
-      margin-right: 10px;
+      margin: 0 auto 10px auto;
+      overflow: hidden;
+    }
+    .product-img img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
     }
     .product-info {
-      flex: 1;
-      min-width: 0;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
     }
     .product-title {
       color: #a30d13;
@@ -143,6 +151,7 @@
       white-space: normal;
       overflow: visible;
       text-overflow: initial;
+      text-align: center;
     }
     .product-desc {
       font-size: 0.99rem;
@@ -152,6 +161,7 @@
       white-space: normal;
       overflow: visible;
       text-overflow: initial;
+      text-align: center;
     }
     .product-price {
       color: #cead4c;
@@ -159,10 +169,10 @@
       margin-top: 1px;
       font-weight: 600;
       font-family: 'Montserrat', Arial, sans-serif;
+      text-align: center;
     }
     .btn {
       display: inline-block;
-      margin-left: 20px;
       margin-top: 18px;
       padding: 9px 22px;
       background: linear-gradient(90deg, #cead4c 60%, #e74a2f 100%);
@@ -206,53 +216,54 @@
       .container { max-width: 99vw; }
       .product-list { flex-direction: column; gap: 18px; }
       .product-card { max-width: 99vw; min-width: 0; }
+      .product-img { max-width: 99vw; }
     }
     @media (max-width: 600px) {
       .container { padding: 7px 0; }
       .title-main, .title-sub { font-size: 1.13rem; }
-      .product-card { flex-direction: column; gap: 8px; padding: 14px 8px; }
-      .product-img { width: 56px; height: 56px; }
+      .product-card { padding: 14px 8px; }
+      .product-img { max-width: 99vw; }
       .btn, .more-btn { font-size: 0.99rem; padding: 7px 12px;}
     }
-  .music-tip {
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(34,34,34, 0.93);
-  color: #fff;
-  padding: 22px 36px 18px 36px;
-  border-radius: 16px;
-  font-size: 1.18rem;
-  font-family: 'Montserrat', 'Noto Serif SC', serif;
-  box-shadow: 0 4px 24px #2227;
-  z-index: 9999;
-  text-align: center;
-  pointer-events: none;
-  opacity: 1;
-  transition: opacity 0.6s;
-}
-.music-tip.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-  .survey-desc {
-  margin: 0 0 26px 0;
-  padding-left: 1.6em;
-  color: #a30d13;
-  font-size: 1.14rem;
-  line-height: 1.7;
-  font-family: 'Noto Serif SC', serif;
-  text-align: left;
-  max-width: 900px;
-}
-.survey-desc li {
-  margin-bottom: 8px;
-  list-style-type: disc;
-}
-@media (max-width: 600px) {
-  .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
-}
+    .music-tip {
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(34,34,34, 0.93);
+      color: #fff;
+      padding: 22px 36px 18px 36px;
+      border-radius: 16px;
+      font-size: 1.18rem;
+      font-family: 'Montserrat', 'Noto Serif SC', serif;
+      box-shadow: 0 4px 24px #2227;
+      z-index: 9999;
+      text-align: center;
+      pointer-events: none;
+      opacity: 1;
+      transition: opacity 0.6s;
+    }
+    .music-tip.hide {
+      opacity: 0;
+      pointer-events: none;
+    }
+    .survey-desc {
+      margin: 0 0 26px 0;
+      padding-left: 1.6em;
+      color: #a30d13;
+      font-size: 1.14rem;
+      line-height: 1.7;
+      font-family: 'Noto Serif SC', serif;
+      text-align: left;
+      max-width: 900px;
+    }
+    .survey-desc li {
+      margin-bottom: 8px;
+      list-style-type: disc;
+    }
+    @media (max-width: 600px) {
+      .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
+    }
   </style>
 </head>
 <body>
@@ -272,7 +283,7 @@
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
-          <img src="Product1.JPG" alt="产品1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product1.JPG" alt="产品1" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">晨雾山影帆布袋</div>
@@ -283,7 +294,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product2.JPG" alt="产品2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product2.JPG" alt="产品2" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">天鹅水影眼镜布</div>
@@ -294,7 +305,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product3.JPG" alt="产品3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product3.JPG" alt="产品3" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">海岸灯塔收纳束口袋</div>
@@ -305,7 +316,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product4.JPG" alt="产品4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product4.JPG" alt="产品4" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">涟漪之光地垫</div>
@@ -316,7 +327,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product5.JPG" alt="产品5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product5.JPG" alt="产品5" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">牧野时光玻璃相框</div>
@@ -327,7 +338,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product6.JPG" alt="产品6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product6.JPG" alt="产品6" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">自然印象书签</div>
@@ -338,7 +349,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product7.JPG" alt="产品7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product7.JPG" alt="产品7" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">风景双面纪念币</div>
@@ -349,7 +360,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product8.JPG" alt="产品8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+          <img src="Product8.JPG" alt="产品8" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">绿野静憩毛毯</div>
@@ -359,55 +370,57 @@
         </div>
       </div>
     </div>
- <div class="survey-desc center-text">
-  请回到问卷<br>
-  点击下一部分继续填写问卷  </div>
-  <!-- NetEase Music BGM Player -->
-  <meting-js
-    server="netease"
-    type="song"
-    id="2065383797"
-    fixed="true"
-    autoplay="true"
-    loop="all"
-    order="list"
-    volume="0.5"
-  ></meting-js>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  var played = false;
-  var tip = document.getElementById('music-tip');
-  function playBGM() {
-    if (played) return;
-    var ap = document.querySelector('meting-js').aplayer;
-    if (ap) {
-      ap.audio.play();
-      played = true;
-      if (tip) {
-        tip.classList.add('hide');
-        setTimeout(function(){ tip.style.display = 'none'; }, 900);
-      }
-    } else {
-      setTimeout(playBGM, 500);
-    }
-  }
-  document.body.addEventListener('click', playBGM, { once: true });
-});
-</script>
-<div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
-  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
-</div>
-<script>
-document.querySelectorAll('.enlarge-img').forEach(img => {
-  img.style.cursor = 'zoom-in';
-  img.onclick = () => {
-    document.getElementById('modal-img').src = img.src;
-    document.getElementById('img-modal').style.display = 'flex';
-  };
-});
-document.getElementById('img-modal').onclick = function(e) {
-  if (e.target === this) this.style.display = 'none';
-};
-</script>
+    <div class="survey-desc center-text">
+      请回到问卷<br>
+      点击下一部分继续填写问卷
+    </div>
+    <!-- NetEase Music BGM Player -->
+    <meting-js
+      server="netease"
+      type="song"
+      id="2065383797"
+      fixed="true"
+      autoplay="true"
+      loop="all"
+      order="list"
+      volume="0.5"
+    ></meting-js>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var played = false;
+        var tip = document.getElementById('music-tip');
+        function playBGM() {
+          if (played) return;
+          var ap = document.querySelector('meting-js').aplayer;
+          if (ap) {
+            ap.audio.play();
+            played = true;
+            if (tip) {
+              tip.classList.add('hide');
+              setTimeout(function(){ tip.style.display = 'none'; }, 900);
+            }
+          } else {
+            setTimeout(playBGM, 500);
+          }
+        }
+        document.body.addEventListener('click', playBGM, { once: true });
+      });
+    </script>
+    <div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+      <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+    </div>
+    <script>
+      document.querySelectorAll('.enlarge-img').forEach(img => {
+        img.style.cursor = 'zoom-in';
+        img.onclick = () => {
+          document.getElementById('modal-img').src = img.src;
+          document.getElementById('img-modal').style.display = 'flex';
+        };
+      });
+      document.getElementById('img-modal').onclick = function(e) {
+        if (e.target === this) this.style.display = 'none';
+      };
+    </script>
+  </div>
 </body>
 </html>
